recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: Boolean does not take parameters
			gauche(angle)
                              ^Tree:10: error: Boolean does not take parameters
			gauche(2*angle)
                              ^