recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var longueur = length
	var etage = steps
	var gauche = false
		if(steps == 0) {
			gauche(angle)
			recule(length)
			gauche(2*angle)
			etage += 1

			tree(etage,longueur,angle,shrink)
		}
			
		else {	
			current(steps)

			avance(length)
			droite(angle)

			longueur = longueur * shrink
			etage -= 1

			tree(etage,longueur,angle,shrink)
		}
}
